# sm

./: .gitignore  CMakeLists.txt  README.md  compile_this.sh
conf/: sm.conf.json
output/: sm.conf.json
src/: consts.cpp  consts.hpp  functions.cpp  functions.hpp  main.cpp  menu_elements.cpp  menu_elements.hpp
